# welbex

./: Makefile  pyproject.toml
scripts/: add_bd.py  bd.py  read_file.py
welbex/: settings.py  urls.py
welbex/cars/: apps.py  forms.py  models.py
welbex/cars/migrations/: 0001_initial.py
welbex/location/: apps.py  forms.py  models.py
welbex/location/migrations/: 0001_initial.py
welbex/parcels/: apps.py  forms.py  models.py
welbex/parcels/migrations/: 0001_initial.py
